--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             #history-log > p{
                 font-size: 20px;
                 padding:10px ;
-                background-color: aquamarine;
+                background-color: gray;
                 margin: 8px;
                 border: none;
                 border-radius: 10px;
@@ -32,7 +32,7 @@
         </style>
 </head>
 
-<body class="">
+<body class="bg-cyan-400 py-4">
     <header class="max-w-7xl mx-auto md:px-9 lg:px-o space-y-4 my-4">
         <nav class="flex justify-between p-4 bg-white rounded-lg">
             <div class="flex items-center gap-4">
@@ -56,7 +56,7 @@
                     <div class="flex items-center gap-4 bg-slate-100 rounded-lg p-4">
                         <i class="fa-solid fa-square-check text-3xl text-blue-600 "></i>
                         <div>
-                            <p>task assinged</p>
+                            <p class="text-lg font-semibold">task assinged</p>
                             <h4 id="main-task" class="text-3xl font-bold">6</h4>
                         </div>
                     </div>
@@ -90,7 +90,7 @@
                     <div class="bg-slate-100 px-4 py-8 rounded-lg">
                         <span class="bg-white px-4 py-2 rounded-md ">CloudSync</span>
                         <h1 id="title-2" class="text-xl font-bold mt-4">Add Dark Mode </h1>
-                        <p class="bg-white p-4 my-4 rounded-lg">Store the user's preference in localStorage, update CSS
+                        <p class="bg-white p-4 my-4 rounded-lg">Store the user's preference in localStorage, update CSS  check for overlapping
                         </p>
                         <div class="flex items-center justify-between">
                             <div>
