--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
     </header>
     <main class="max-w-7xl mx-auto md:px-9 lg:px-o space-y-4 
     ">
-        <section class="  grid grid-cols-[auto_20%] gap-4 ">
+        <section class="  grid grid-cols-1 lg:grid-cols-[auto_20%] md:grid-cols-[auto_20%] gap-4 ">
             <div class="bg-white p-4 rounded-lg">
-                <div class="grid grid-cols-[25%_auto_25%] justify-between gap-4   ">
-                    <div class="flex items-center gap-4 bg-slate-100 rounded-lg p-4">
+                <div class="grid grid-cols-2  lg:grid-cols-4 justify-between gap-4">
+                    <div class="flex items-center gap-4 bg-slate-100 rounded-lg p-4 order-last lg:order-first">
                         <i class="fa-solid fa-square-check text-3xl text-blue-600 "></i>
                         <div>
                             <p class="text-lg font-semibold">task assinged</p>
                             <h4 id="main-task" class="text-3xl font-bold">6</h4>
                         </div>
                     </div>
-                    <div id="btn-blog" class="flex items-center p-4 bg-gradient-to-br from-blue-500 to-blue-300 rounded-lg px-8">
-                        <img src="assets/board.png" alt="">
-                        <h3 class="text-white text-3xl">Discover Something <br>New Today!</h3>
+                    <div id="btn-blog" class="flex items-center p-4 bg-gradient-to-br from-blue-500 to-blue-300 rounded-lg lg:px-8 col-span-2">
+                        <img class="w-14" src="assets/board.png" alt="">
+                        <h3 class="text-white text-xl lg:text-3xl">Discover Something <br>New Today!</h3>
                     </div>
                     <div class="flex items-center gap-4 bg-slate-100 rounded-lg p-4">
                         <img src="assets/calender.png" alt="">
@@ -73,7 +73,7 @@
                     </div>
                 </div>
 
-                <div class="grid grid-cols-3 gap-8 my-4 rounded-lg  ">
+                <div class="grid grid-cols-2 lg:grid-cols-3 gap-8 my-4 rounded-lg  ">
                     <div class="bg-slate-100 px-4 py-8 rounded-lg">
                         <span class="bg-white px-4 py-2 rounded-md ">ShopEase</span>
                         <h1 id="title-1" class="text-xl font-bold mt-4">Fix Mobile Button Issue </h1>
